# cmake_cpp_template

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: dummy_file.cpp  main.cpp
